# taskmaid

./: Cargo.toml  LICENSE  README.md
scripts/: active_watcher  deploy  lswin
src/: dbus.rs  event.rs  main.rs  toplevel.rs  topmaid.rs  topwoman.rs  util.rs  wayland.rs
