[package]
name = "taskmaid"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "*"
tracing = "*"

byteorder = "*"

futures = "*"
dbus = "*"
dbus-crossroads = "*"
dbus-tokio = "*"

wayland-client = "*"

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]

[dependencies.wayland-protocols]
version = "*"
features = ["client"]

[dependencies.wayland-protocols-wlr]
version = "*"
features = ["client"]

[dependencies.tokio]
version = "*"
features = ["net", "rt", "sync", "macros"]

[profile.release]
lto = true
